--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ html,body{
 #onespan {
     width: 80px;
     height: 50px;
-    background-image: url(house.jpg);
+    background-image: url(house.webp);
     background-size: cover;
     background-position: 0% 80%;
 }
@@ -179,7 +179,7 @@ html,body{
 #twospan {
     width: 80px;
     height: 50px;
-    background-image: url(glass.jpg);
+    background-image: url(glass.webp);
     background-size: cover;
     background-position: 0% 60%;
 }
@@ -187,7 +187,7 @@ html,body{
 #threespan {
     width: 80px;
     height: 50px;
-    background-image: url(dif.jpg);
+    background-image: url(dif.webp);
     background-size: cover;
     background-position: 0% 60%;
 }
